x/sql/parser/simplesql_parser.go
// Code generated from SimpleSql.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // SimpleSql

import (
	"fmt"
	"strconv"
	"sync"

	antlr "github.com/wrmsr/bane/core/antlr/runtime"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SimpleSqlParser struct {
	*antlr.BaseParser
}

var simplesqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func simplesqlParserInit() {
	staticData := &simplesqlParserStaticData
	staticData.literalNames = []string{
		"", "';'", "','", "'('", "')'", "'*'", "'::'", "'.'", "'='", "'!='",
		"'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'/'", "'%'", "'||'",
		"'all'", "'and'", "'as'", "'asc'", "'by'", "'case'", "'cross'", "'desc'",
		"'distinct'", "'else'", "'end'", "'false'", "'from'", "'full'", "'group'",
		"'having'", "'in'", "'inner'", "'is'", "'join'", "'left'", "'like'",
		"'natural'", "'not'", "'null'", "'on'", "'or'", "'order'", "'outer'",
		"'over'", "'right'", "'select'", "'then'", "'true'", "'union'", "'when'",
		"'where'", "'with'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "ALL", "AND", "AS", "ASC", "BY", "CASE", "CROSS", "DESC",
		"DISTINCT", "ELSE", "END", "FALSE", "FROM", "FULL", "GROUP", "HAVING",
		"IN", "INNER", "IS", "JOIN", "LEFT", "LIKE", "NATURAL", "NOT", "NULL",
		"ON", "OR", "ORDER", "OUTER", "OVER", "RIGHT", "SELECT", "THEN", "TRUE",
		"UNION", "WHEN", "WHERE", "WITH", "STRING", "INTEGER_VALUE", "DECIMAL_VALUE",
		"FLOAT_VALUE", "IDENTIFIER", "QUOTED_IDENTIFIER", "COMMENT", "BLOCK_COMMENT",
		"WS",
	}
	staticData.ruleNames = []string{
		"singleStatement", "select", "cteSelect", "cte", "unionSelect", "unionItem",
		"primarySelect", "selectItem", "expression", "booleanExpression", "predicate",
		"valueExpression", "primaryExpression", "simpleExpression", "caseItem",
		"over", "sortItem", "relation", "groupBy", "qualifiedName", "identifierList",
		"identifier", "quotedIdentifier", "number", "str", "null", "true", "false",
		"setQuantifier", "joinType", "cmpOp", "arithOp", "unaryOp", "unquotedIdentifier",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SimpleSqlParserInit initializes any static state used to implement SimpleSqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSimpleSqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SimpleSqlParserInit() {
	staticData := &simplesqlParserStaticData
	staticData.once.Do(simplesqlParserInit)
}

// NewSimpleSqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSimpleSqlParser(input antlr.TokenStream) *SimpleSqlParser {
	SimpleSqlParserInit()
	this := new(SimpleSqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &simplesqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "SimpleSql.g4"

	return this
}

// SimpleSqlParser tokens.
const (
	SimpleSqlParserEOF               = antlr.TokenEOF
	SimpleSqlParserT__0              = 1
	SimpleSqlParserT__1              = 2
	SimpleSqlParserT__2              = 3
	SimpleSqlParserT__3              = 4
	SimpleSqlParserT__4              = 5
	SimpleSqlParserT__5              = 6
	SimpleSqlParserT__6              = 7
	SimpleSqlParserT__7              = 8
	SimpleSqlParserT__8              = 9
	SimpleSqlParserT__9              = 10
	SimpleSqlParserT__10             = 11
	SimpleSqlParserT__11             = 12
	SimpleSqlParserT__12             = 13
	SimpleSqlParserT__13             = 14
	SimpleSqlParserT__14             = 15
	SimpleSqlParserT__15             = 16
	SimpleSqlParserT__16             = 17
	SimpleSqlParserT__17             = 18
	SimpleSqlParserT__18             = 19
	SimpleSqlParserALL               = 20
	SimpleSqlParserAND               = 21
	SimpleSqlParserAS                = 22
	SimpleSqlParserASC               = 23
	SimpleSqlParserBY                = 24
	SimpleSqlParserCASE              = 25
	SimpleSqlParserCROSS             = 26
	SimpleSqlParserDESC              = 27
	SimpleSqlParserDISTINCT          = 28
	SimpleSqlParserELSE              = 29
	SimpleSqlParserEND               = 30
	SimpleSqlParserFALSE             = 31
	SimpleSqlParserFROM              = 32
	SimpleSqlParserFULL              = 33
	SimpleSqlParserGROUP             = 34
	SimpleSqlParserHAVING            = 35
	SimpleSqlParserIN                = 36
	SimpleSqlParserINNER             = 37
	SimpleSqlParserIS                = 38
	SimpleSqlParserJOIN              = 39
	SimpleSqlParserLEFT              = 40
	SimpleSqlParserLIKE              = 41
	SimpleSqlParserNATURAL           = 42
	SimpleSqlParserNOT               = 43
	SimpleSqlParserNULL              = 44
	SimpleSqlParserON                = 45
	SimpleSqlParserOR                = 46
	SimpleSqlParserORDER             = 47
	SimpleSqlParserOUTER             = 48
	SimpleSqlParserOVER              = 49
	SimpleSqlParserRIGHT             = 50
	SimpleSqlParserSELECT            = 51
	SimpleSqlParserTHEN              = 52
	SimpleSqlParserTRUE              = 53
	SimpleSqlParserUNION             = 54
	SimpleSqlParserWHEN              = 55
	SimpleSqlParserWHERE             = 56
	SimpleSqlParserWITH              = 57
	SimpleSqlParserSTRING            = 58
	SimpleSqlParserINTEGER_VALUE     = 59
	SimpleSqlParserDECIMAL_VALUE     = 60
	SimpleSqlParserFLOAT_VALUE       = 61
	SimpleSqlParserIDENTIFIER        = 62
	SimpleSqlParserQUOTED_IDENTIFIER = 63
	SimpleSqlParserCOMMENT           = 64
	SimpleSqlParserBLOCK_COMMENT     = 65
	SimpleSqlParserWS                = 66
)

// SimpleSqlParser rules.
const (
	SimpleSqlParserRULE_singleStatement    = 0
	SimpleSqlParserRULE_select             = 1
	SimpleSqlParserRULE_cteSelect          = 2
	SimpleSqlParserRULE_cte                = 3
	SimpleSqlParserRULE_unionSelect        = 4
	SimpleSqlParserRULE_unionItem          = 5
	SimpleSqlParserRULE_primarySelect      = 6
	SimpleSqlParserRULE_selectItem         = 7
	SimpleSqlParserRULE_expression         = 8
	SimpleSqlParserRULE_booleanExpression  = 9
	SimpleSqlParserRULE_predicate          = 10
	SimpleSqlParserRULE_valueExpression    = 11
	SimpleSqlParserRULE_primaryExpression  = 12
	SimpleSqlParserRULE_simpleExpression   = 13
	SimpleSqlParserRULE_caseItem           = 14
	SimpleSqlParserRULE_over               = 15
	SimpleSqlParserRULE_sortItem           = 16
	SimpleSqlParserRULE_relation           = 17
	SimpleSqlParserRULE_groupBy            = 18
	SimpleSqlParserRULE_qualifiedName      = 19
	SimpleSqlParserRULE_identifierList     = 20
	SimpleSqlParserRULE_identifier         = 21
	SimpleSqlParserRULE_quotedIdentifier   = 22
	SimpleSqlParserRULE_number             = 23
	SimpleSqlParserRULE_str                = 24
	SimpleSqlParserRULE_null               = 25
	SimpleSqlParserRULE_true               = 26
	SimpleSqlParserRULE_false              = 27
	SimpleSqlParserRULE_setQuantifier      = 28
	SimpleSqlParserRULE_joinType           = 29
	SimpleSqlParserRULE_cmpOp              = 30
	SimpleSqlParserRULE_arithOp            = 31
	SimpleSqlParserRULE_unaryOp            = 32
	SimpleSqlParserRULE_unquotedIdentifier = 33
)

// ISingleStatementContext is an interface to support dynamic dispatch.
type ISingleStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Select_() ISelectContext
	EOF() antlr.TerminalNode

	// IsSingleStatementContext differentiates from other interfaces.
	IsSingleStatementContext()
}

type SingleStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySingleStatementContext() *SingleStatementContext {
	var p = new(SingleStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_singleStatement
	return p
}

func (*SingleStatementContext) IsSingleStatementContext() {}

func NewSingleStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SingleStatementContext {
	var p = new(SingleStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_singleStatement

	return p
}

func (s *SingleStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *SingleStatementContext) Select_() ISelectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectContext)
}

func (s *SingleStatementContext) EOF() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserEOF, 0)
}

func (s *SingleStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SingleStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SingleStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.EnterSingleStatement(s)
	}
}

func (s *SingleStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.ExitSingleStatement(s)
	}
}

func (s *SingleStatementContext) Accept(visitor antlr.ParseTreeVisitor) any {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitSingleStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) SingleStatement() (localctx ISingleStatementContext) {
	this := p
	_ = this

	localctx = NewSingleStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SimpleSqlParserRULE_singleStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Select_()
	}
	{
		p.SetState(69)
		p.Match(SimpleSqlParserT__0)
	}
	{
		p.SetState(70)
		p.Match(SimpleSqlParserEOF)
	}

	return localctx
}

// ISelectContext is an interface to support dynamic dispatch.
type ISelectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CteSelect() ICteSelectContext

	// IsSelectContext differentiates from other interfaces.
	IsSelectContext()
}

type SelectContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectContext() *SelectContext {
	var p = new(SelectContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_select
	return p
}

func (*SelectContext) IsSelectContext() {}

func NewSelectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectContext {
	var p = new(SelectContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_select

	return p
}

func (s *SelectContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectContext) CteSelect() ICteSelectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICteSelectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICteSelectContext)
}

func (s *SelectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.EnterSelect(s)
	}
}

func (s *SelectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.ExitSelect(s)
	}
}

func (s *SelectContext) Accept(visitor antlr.ParseTreeVisitor) any {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitSelect(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Select_() (localctx ISelectContext) {
	this := p
	_ = this

	localctx = NewSelectContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SimpleSqlParserRULE_select)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.CteSelect()
	}

	return localctx
}

// ICteSelectContext is an interface to support dynamic dispatch.
type ICteSelectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	UnionSelect() IUnionSelectContext
	WITH() antlr.TerminalNode
	AllCte() []ICteContext
	Cte(i int) ICteContext

	// IsCteSelectContext differentiates from other interfaces.
	IsCteSelectContext()
}

type CteSelectContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCteSelectContext() *CteSelectContext {
	var p = new(CteSelectContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_cteSelect
	return p
}

func (*CteSelectContext) IsCteSelectContext() {}

func NewCteSelectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CteSelectContext {
	var p = new(CteSelectContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_cteSelect

	return p
}

func (s *CteSelectContext) GetParser() antlr.Parser { return s.parser }

func (s *CteSelectContext) UnionSelect() IUnionSelectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnionSelectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnionSelectContext)
}

func (s *CteSelectContext) WITH() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserWITH, 0)
}

func (s *CteSelectContext) AllCte() []ICteContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICteContext); ok {
			len++
		}
	}

	tst := make([]ICteContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICteContext); ok {
			tst[i] = t.(ICteContext)
			i++
		}
	}

	return tst
}

func (s *CteSelectContext) Cte(i int) ICteContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICteContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICteContext)
}

func (s *CteSelectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CteSelectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CteSelectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.EnterCteSelect(s)
	}
}

func (s *CteSelectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.ExitCteSelect(s)
	}
}

func (s *CteSelectContext) Accept(visitor antlr.ParseTreeVisitor) any {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitCteSelect(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) CteSelect() (localctx ICteSelectContext) {
	this := p
	_ = this

	localctx = NewCteSelectContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SimpleSqlParserRULE_cteSelect)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SimpleSqlParserWITH {
		{
			p.SetState(74)
			p.Match(SimpleSqlParserWITH)
		}
		{
			p.SetState(75)
			p.Cte()
		}
		p.SetState(80)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SimpleSqlParserT__1 {
			{
				p.SetState(76)
				p.Match(SimpleSqlParserT__1)
			}
			{
				p.SetState(77)
				p.Cte()
			}

			p.SetState(82)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(85)
		p.UnionSelect()
	}

	return localctx
}

// ICteContext is an interface to support dynamic dispatch.
type ICteContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Identifier() IIdentifierContext
	AS() antlr.TerminalNode
	Select_() ISelectContext

	// IsCteContext differentiates from other interfaces.
	IsCteContext()
}

type CteContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCteContext() *CteContext {
	var p = new(CteContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_cte
	return p
}

func (*CteContext) IsCteContext() {}

func NewCteContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CteContext {
	var p = new(CteContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_cte

	return p
}

func (s *CteContext) GetParser() antlr.Parser { return s.parser }

func (s *CteContext) Identifier() IIdentifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdentifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *CteContext) AS() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserAS, 0)
}

func (s *CteContext) Select_() ISelectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectContext)
}

func (s *CteContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CteContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CteContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.EnterCte(s)
	}
}

func (s *CteContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.ExitCte(s)
	}
}

func (s *CteContext) Accept(visitor antlr.ParseTreeVisitor) any {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitCte(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Cte() (localctx ICteContext) {
	this := p
	_ = this

	localctx = NewCteContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SimpleSqlParserRULE_cte)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		p.Identifier()
	}
	{
		p.SetState(88)
		p.Match(SimpleSqlParserAS)
	}
	{
		p.SetState(89)
		p.Match(SimpleSqlParserT__2)
	}
	{
		p.SetState(90)
		p.Select_()
	}
	{
		p.SetState(91)
		p.Match(SimpleSqlParserT__3)
	}

	return localctx
}

// IUnionSelectContext is an interface to support dynamic dispatch.
type IUnionSelectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PrimarySelect() IPrimarySelectContext
	AllUnionItem() []IUnionItemContext
	UnionItem(i int) IUnionItemContext

	// IsUnionSelectContext differentiates from other interfaces.
	IsUnionSelectContext()
}

type UnionSelectContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnionSelectContext() *UnionSelectContext {
	var p = new(UnionSelectContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_unionSelect
	return p
}

func (*UnionSelectContext) IsUnionSelectContext() {}

func NewUnionSelectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnionSelectContext {
	var p = new(UnionSelectContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_unionSelect

	return p
}

func (s *UnionSelectContext) GetParser() antlr.Parser { return s.parser }

func (s *UnionSelectContext) PrimarySelect() IPrimarySelectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimarySelectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimarySelectContext)
}

func (s *UnionSelectContext) AllUnionItem() []IUnionItemContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IUnionItemContext); ok {
			len++
		}
	}

	tst := make([]IUnionItemContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IUnionItemContext); ok {
			tst[i] = t.(IUnionItemContext)
			i++
		}
	}

	return tst
}

func (s *UnionSelectContext) UnionItem(i int) IUnionItemContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnionItemContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnionItemContext)
}

func (s *UnionSelectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnionSelectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnionSelectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.EnterUnionSelect(s)
	}
}

func (s *UnionSelectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimpleSqlListener); ok {
		listenerT.ExitUnionSelect(s)
	}
}

func (s *UnionSelectContext) Accept(visitor antlr.ParseTreeVisitor) any {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitUnionSelect(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) UnionSelect() (localctx IUnionSelectContext) {
	this := p
	_ = this
